force-app/main/default/objects/PIM_Product_Stage__c/PIM_Product_Stage__c.object-meta.xml
<CustomObject>
    <description>MERIT-PIM Integration</description>
    <label>PIM Product Stage</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>PIM Product Stage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIM Product Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>