force-app/main/default/objects/PIM_Product_Stage__c/fields/Active_Prod__c.field-meta.xml
<CustomField>
    <fullName>Active_Prod__c</fullName>
    <formula>Product_Name_Prod__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (Prod)</label>
    <type>Checkbox</type>
</CustomField>