force-app/main/default/objects/PIM_Product_Stage__c/fields/Change_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Change_Tracker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Tracker</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>