force-app/main/default/objects/PIM_Product_Stage__c/fields/Considered_For_StepWise_Integration__c.field-meta.xml
<CustomField>
    <fullName>Considered_For_StepWise_Integration__c</fullName>
    <label>Considered For StepWise Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>