force-app/main/default/objects/PIM_Product_Stage__c/fields/Distribution_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribution Type Flag</label>
    <type>Checkbox</type>
</CustomField>