force-app/main/default/objects/PIM_Product_Stage__c/fields/Do_Not_Include_in_Total__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Include_in_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Include in Total</label>
    <type>Checkbox</type>
</CustomField>