force-app/main/default/objects/PIM_Product_Stage__c/fields/Eligible_for_Sales_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Sales_Incentives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible for Sales Incentives (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>