force-app/main/default/objects/PIM_Product_Stage__c/fields/Eligible_for_Sales_Incentives_Prod__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Sales_Incentives_Prod__c</fullName>
    <formula>TEXT(Product_Name_Prod__r.Eligible_for_Sales_Incentives__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Sales Incentives (Prod)</label>
    <type>Text</type>
</CustomField>