force-app/main/default/objects/PIM_Product_Stage__c/fields/Funding_Type_Prod__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type_Prod__c</fullName>
    <formula>TEXT( Product_Name_Prod__r.Funding_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Type (Prod)</label>
    <type>Text</type>
</CustomField>