force-app/main/default/objects/PIM_Product_Stage__c/fields/Funding_Type_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funding Type (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>