force-app/main/default/objects/PIM_Product_Stage__c/fields/Id_Stage__c.field-meta.xml
<CustomField>
    <fullName>Id_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product ID (Stage)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>