force-app/main/default/objects/PIM_Product_Stage__c/fields/IsActiveProd__c.field-meta.xml
<CustomField>
    <fullName>IsActiveProd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active (Prod)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>