force-app/main/default/objects/PIM_Product_Stage__c/fields/IsActiveStage__c.field-meta.xml
<CustomField>
    <fullName>IsActiveStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active (Stage)</label>
    <type>Checkbox</type>
</CustomField>