force-app/main/default/objects/PIM_Product_Stage__c/fields/Level2_Options_Prod__c.field-meta.xml
<CustomField>
    <fullName>Level2_Options_Prod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level2 Options Prod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>