force-app/main/default/objects/PIM_Product_Stage__c/fields/Level_2_Options_Stage__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Options_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level 2 Options (Stage)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>