force-app/main/default/objects/PIM_Product_Stage__c/fields/NAStandardImplementationLeadTime_Stage__c.field-meta.xml
<CustomField>
    <fullName>NAStandardImplementationLeadTime_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC NA Standard impl. Lead Time (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>