force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Availability_Compare__c.field-meta.xml
<CustomField>
    <fullName>PIM_Availability_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(PIM_Availability_Stage__c)),
        NOT(ISBLANK(PIM_Availability_Prod__c)),
        PIM_Availability_Stage__c = PIM_Availability_Prod__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM Availability (Compare)</label>
    <type>Text</type>
</CustomField>