force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Availability_Prod__c.field-meta.xml
<CustomField>
    <fullName>PIM_Availability_Prod__c</fullName>
    <formula>Product_Name_Prod__r.PIM_AVAILABILITY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM Availability (Prod)</label>
    <type>Text</type>
</CustomField>