force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Availability_Stage__c.field-meta.xml
<CustomField>
    <fullName>PIM_Availability_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM Availability (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>