force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_ID_Compare__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID_Compare__c</fullName>
    <formula>IF(
    PIM_ID_Stage__c = PIM_ID_Prod__c,
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM ID (Compare)</label>
    <type>Text</type>
</CustomField>