force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_ID_COMPOSITE_Compare__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID_COMPOSITE_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(PIM_ID_Composite_Stage__c)),
        NOT(ISBLANK(PIM_ID_COMPOSITE_Prod__c)),
        PIM_ID_Composite_Stage__c = PIM_ID_COMPOSITE_Prod__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM_ID_COMPOSITE (Compare)</label>
    <type>Text</type>
</CustomField>