force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_ID_COMPOSITE_Prod__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID_Composite_Prod__c</fullName>
    <formula>Product_Name_Prod__r.PIM_ID_COMPOSITE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM ID Composite (Prod)</label>
    <type>Text</type>
</CustomField>