force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_ID_Composite_Stage__c.field-meta.xml
<CustomField>
    <fullName>PIM_ID_Composite_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM ID Composite (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>