force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Name_Compare__c.field-meta.xml
<CustomField>
    <fullName>PIM_Name_Compare__c</fullName>
    <formula>IF(
    PIM_Name_Prod__c = PIM_Name_Stage__c,
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM Name (Compare)</label>
    <type>Text</type>
</CustomField>