force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Parent_ID_Prod__c.field-meta.xml
<CustomField>
    <fullName>PIM_Parent_ID_Prod__c</fullName>
    <formula>Product_Name_Prod__r.PIM_PARENT_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM Parent ID (Prod)</label>
    <type>Text</type>
</CustomField>