force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_Parent_Name_Compare__c.field-meta.xml
<CustomField>
    <fullName>PIM_Parent_Name_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(PIM_Parent_Name_Prod__c)),
        NOT(ISBLANK(PIM_Parent_Name_Stage__c)),
        PIM_Parent_Name_Prod__c = PIM_Parent_Name_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM Parent Name (Compare)</label>
    <type>Text</type>
</CustomField>