force-app/main/default/objects/PIM_Product_Stage__c/fields/PIM_SME_Name_Prod__c.field-meta.xml
<CustomField>
    <fullName>PIM_SME_Name_Prod__c</fullName>
    <formula>Product_Name_Prod__r.PIM_SME_NAME__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIM SME Name (Prod)</label>
    <type>Text</type>
</CustomField>