force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Change_Type__c</fullName>
    <label>Product Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Change in Product</fullName>
            </value>
            <value>
                <fullName>Deactivation</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>