force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Code_Compare__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Product_Code_Prod__c)),
        NOT(ISBLANK(PIM_Name_Stage__c)),
        Product_Code_Prod__c = PIM_Name_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code (Compare)</label>
    <type>Text</type>
</CustomField>