force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Code_Prod__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Prod__c</fullName>
    <formula>Product_Name_Prod__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code (Prod)</label>
    <type>Text</type>
</CustomField>