force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Code_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Code (Stage)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>