force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Display_Order_Compare__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Order_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Product_Display_Order_Prod__c)),
        NOT(ISBLANK(Product_Display_Order_Stage__c)),
        Product_Display_Order_Prod__c = Product_Display_Order_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Display Order (Compare)</label>
    <type>Text</type>
</CustomField>