force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Display_Order_Prod__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Order_Prod__c</fullName>
    <formula>Product_Name_Prod__r.Product_Display_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Display Order (Current)</label>
    <type>Text</type>
</CustomField>