force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Display_Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Order_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Display Order (To be Updated)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>