force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Family_Prod__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Prod__c</fullName>
    <formula>TEXT( Product_Name_Prod__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family (Prod)</label>
    <type>Text</type>
</CustomField>