force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_ID_Compare__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Product_ID_Prod__c)),
        NOT(ISBLANK(Id_Stage__c)),
        Product_ID_Prod__c = Id_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (Compare)</label>
    <type>Text</type>
</CustomField>