force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_ID_Prod__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Prod__c</fullName>
    <formula>Product_Name_Prod__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (Prod)</label>
    <type>Text</type>
</CustomField>