force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Line_Prod__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Prod__c</fullName>
    <formula>TEXT( Product_Name_Prod__r.Product_Line__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line (Prod)</label>
    <type>Text</type>
</CustomField>