force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Master__c.field-meta.xml
<CustomField>
    <fullName>Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Master</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PIM Product Stage</relationshipLabel>
    <relationshipName>PIM_Product_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>