force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Product_Name_Prod__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name (Prod)</label>
    <type>Text</type>
</CustomField>