force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Name_Compare__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Product_Name_Prod__c)),
        NOT(ISBLANK(Product_Name_Stage__c)),
        Product_Name_Prod__c = Product_Name_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name (Compare)</label>
    <type>Text</type>
</CustomField>