force-app/main/default/objects/PIM_Product_Stage__c/fields/Product_Name_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>