force-app/main/default/objects/PIM_Product_Stage__c/fields/Program_Code1_Prod__c.field-meta.xml
<CustomField>
    <fullName>Program_Code1_Prod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Program Code (Prod)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>