force-app/main/default/objects/PIM_Product_Stage__c/fields/Program_Code_Compare__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Program_Code_Prod__c)),
        NOT(ISBLANK(Program_Code_Stage__c)),
        Program_Code_Prod__c = Program_Code_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code (Compare)</label>
    <type>Text</type>
</CustomField>