force-app/main/default/objects/PIM_Product_Stage__c/fields/Program_Code_Prod__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_Prod__c</fullName>
    <formula>Product_Name_Prod__r.PIM_PROGRAM_CODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code (Prod)</label>
    <type>Text</type>
</CustomField>