force-app/main/default/objects/PIM_Product_Stage__c/fields/Program_Code_Stage__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Code (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>