force-app/main/default/objects/PIM_Product_Stage__c/fields/Reporting_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Product_Type__c</fullName>
    <label>Reporting Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>FIGO</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>All Other Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>