force-app/main/default/objects/PIM_Product_Stage__c/fields/SFGO_Applicable_Product_Prod__c.field-meta.xml
<CustomField>
    <fullName>SFGO_Applicable_Product_Prod__c</fullName>
    <formula>Product_Name_Prod__r.SFGO_Applicable_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFGO Applicable Product? (Prod)</label>
    <type>Checkbox</type>
</CustomField>