force-app/main/default/objects/PIM_Product_Stage__c/fields/SFGO_Applicable_Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>SFGO_Applicable_Product_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFGO Applicable Product? (Stage)</label>
    <type>Checkbox</type>
</CustomField>