force-app/main/default/objects/PIM_Product_Stage__c/fields/Skip_Status_Update_c__c.field-meta.xml
<CustomField>
    <fullName>Skip_Status_Update_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip_Status_Update__c</label>
    <type>Checkbox</type>
</CustomField>