force-app/main/default/objects/PIM_Product_Stage__c/fields/Standard_Implementation_Lead_Time_Prod__c.field-meta.xml
<CustomField>
    <fullName>Standard_Implementation_Lead_Time_Prod__c</fullName>
    <formula>SUBSTITUTE(
Product_Name_Prod__r.Standard_Implementation_Lead_Time__c,
&quot;.&quot;,
&quot;.​&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Implementation Lead Time (Prod)</label>
    <type>Text</type>
</CustomField>