force-app/main/default/objects/PIM_Product_Stage__c/fields/Standard_Implementation_LeadTime_Stage__c.field-meta.xml
<CustomField>
    <fullName>Standard_Implementation_LeadTime_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standard Implementation Lead Time(Stage)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>