force-app/main/default/objects/PIM_Product_Stage__c/fields/StepWise_Product_RowID__c.field-meta.xml
<CustomField>
    <fullName>StepWise_Product_RowID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StepWise Product RowID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>