force-app/main/default/objects/PIM_Product_Stage__c/fields/Supplier_Code_Compare__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code_Compare__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Supplier_Code_Prod__c)),
        NOT(ISBLANK(Supplier_Code_Stage__c)),
        Supplier_Code_Prod__c = Supplier_Code_Stage__c
    ),
    &quot;Match&quot;,
    &quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Code (Compare)</label>
    <type>Text</type>
</CustomField>