force-app/main/default/objects/PIM_Product_Stage__c/fields/Supplier_Code_Stage__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier Code (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>