force-app/main/default/objects/PIM_Product_Stage__c/fields/Surest_Applicable_Products_Prod__c.field-meta.xml
<CustomField>
    <fullName>Surest_Applicable_Products_Prod__c</fullName>
    <label>Surest Applicable Products (Prod)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available for Surest and/or UNET</fullName>
            </value>
            <value>
                <fullName>Available for Surest only</fullName>
            </value>
            <value>
                <fullName>Available for Surest only with UNET</fullName>
            </value>
            <value>
                <fullName>Not Available for Surest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>