force-app/main/default/objects/PIM_Product_Stage__c/fields/Surest_Applicable_Products_Stage__c.field-meta.xml
<CustomField>
    <fullName>Surest_Applicable_Products_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Applicable Products (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>