force-app/main/default/objects/PIM_Product_Stage__c/fields/Surest_Implementation_Lead_Time_Prod__c.field-meta.xml
<CustomField>
    <fullName>Surest_Implementation_Lead_Time_Prod__c</fullName>
    <formula>Product_Name_Prod__r.Surest_Implementation_Lead_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surest Implementation Lead Time (Prod)</label>
    <type>Text</type>
</CustomField>