force-app/main/default/objects/PIM_Product_Stage__c/fields/Surest_Implementation_Lead_Time_Stage__c.field-meta.xml
<CustomField>
    <fullName>Surest_Implementation_Lead_Time_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Implementation Lead Time (Stage)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>