force-app/main/default/objects/PIM_Product_Stage__c/fields/UHC_NA_Standard_Impl_Lead_Time_Prod__c.field-meta.xml
<CustomField>
    <fullName>UHC_NA_Standard_Impl_Lead_Time_Prod__c</fullName>
    <formula>SUBSTITUTE(
Product_Name_Prod__r.UHC_NA_Standard_Implementation_Lead_Time__c,
&quot;.&quot;,
&quot;.​&quot;
)</formula>
    <label>UHC NA Standard impl. Lead Time (Prod)</label>
    <type>Text</type>
</CustomField>