force-app/main/default/objects/PIM_Product_Stage__c/fields/Underwriting_Validation__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Validation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Validation (Stage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>