force-app/main/default/objects/PIM_Product_Stage__c/fields/Underwriting_Validation_Prod__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Validation_Prod__c</fullName>
    <formula>TEXT(Product_Name_Prod__r.Underwriting_Validation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Underwriting Validation (Prod)</label>
    <type>Text</type>
</CustomField>