force-app/main/default/objects/PIM_Product_Stage__c/validationRules/Restrict_Access_for_System_Admin_on_PIM.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Access_for_System_Admin_on_PIM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT($Permission.Edit_Integration_Records),
    OR(
        ISCHANGED(Source__c),
        ISCHANGED(PIM_ID_Stage__c),
								ISCHANGED(PIM_Parent_ID_Stage__c),
								ISCHANGED(PIM_Name_Stage__c),
								ISCHANGED(PIM_Parent_Name_Stage__c),
								ISCHANGED(PIM_SME_Name_Stage__c),
								ISCHANGED(Program_Code_Stage__c),
								ISCHANGED(PIM_ID_Composite_Stage__c),
								ISCHANGED(Supplier_Code_Stage__c),
								ISCHANGED(PIM_Availability_Stage__c),
								ISCHANGED(Standard_Implementation_LeadTime_Stage__c),
								ISCHANGED(Surest_Implementation_Lead_Time_Stage__c),
								ISCHANGED(Id_Stage__c),
								ISCHANGED(Funding_Type_Stage__c),
								ISCHANGED(Product_Name_Stage__c),
								ISCHANGED(Product_Line_Stage__c),
								ISCHANGED(Product_Code_Stage__c),
								ISCHANGED(Level_2_Options_Stage__c),
								ISCHANGED(IsActiveStage__c),
								ISCHANGED(Surest_Applicable_Products_Stage__c),
								ISCHANGED(Product_Family_Stage__c),
								ISCHANGED(CPW_Applicable_Product_Stage__c),
								ISCHANGED(SFGO_Applicable_Product_Stage__c),
								ISCHANGED(Underwriting_Validation__c),
								ISCHANGED(Eligible_for_Sales_Incentives__c),
								ISCHANGED(NAStandardImplementationLeadTime_Stage__c)
							   )
)</errorConditionFormula>
    <errorMessage>The following fields cannot be edited</errorMessage>
</ValidationRule>