force-app/main/default/objects/PIM_Product_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name_Stage__c</columns>
    <columns>Product_Code_Stage__c</columns>
    <columns>Product_Line_Stage__c</columns>
    <columns>IsActiveStage__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Change_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Change_Tracker__c</columns>
    <columns>Surest_Applicable_Products_Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>